[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = BasicCrawler
version = 0.0.1
author = Liang Ziyi
author_email = hower36@163.com
description = A basic cralwer module using Selenium
long_description = A basic cralwer module using Selenium. First time use should create config.json

[options]
install_requires =
    selenium >= 4.9.1
    pyperclip >= 1.8.2
    PyAutoGUI >= 0.9.53
packages = find:


